# todo-fastapi-sqlalchemy

./: .gitignore  README.md  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
