[project]
name = "todo-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
